--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p> <h4><b> THAT LINK IS A TRAP! DON'T TRUST IT!!! </b></h4></p>
     <table>
       <tr>
-        <a href="https://codepen.io/SpencerLessard/pen/yLPRjMe" target = blank<td>This is not a link.</td></a>
+        <a href="notalink.html" target = blank<td>This is not a link.</td></a>
         <td> Don't believe me?</td>
       </tr>
       <tr>
